--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,9 +3,9 @@
     <nav class="header__nav">
         <a href="/" class="header__logo">Blog</a>
         <ul>
-            <li><a href="/" class="<%= isActiveRoute('/', currentRoute) %>">Home</a></li>
-            <li><a href="/about" class="<%= isActiveRoute('/about', currentRoute) %>">About</a></li>
-            <li><a href="/contact"   class="<%= isActiveRoute('/contact', currentRoute) %>">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about" %>">About</a></li>
+            <li><a href="/contact"   >Contact</a></li>
         </ul>
         <div class="header__button">
             <button class="searchBtn" aria-expanded="false">
